Criação do controller e pág para listar categorias

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,6 +26,10 @@
 .topo-site .dropdown-menu {
     background-color: #231F20;
 }
+.lista-categoria {
+    list-style-type: none;
+}
+
 
 .conteudo-site .seta{
     width: 6%;
